added routing code for the /login endpoint
